--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemailer": "^6.7.3"
   },
   "repository": {
     "type": "git",
